[package]
name = "bernoulli-vs-moivre-laplace"
version = "0.1.0"
edition = "2021"

# [target.release]
# incremental=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
fraction = "0.13.1"
gloo-worker = "0.4.0"
leptos = { version = "0.5.0-beta2", features = ["nightly", "csr"] }
num-bigint = "0.4.4"
num-rational = "0.4.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
solver = { path = "solver" }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["HtmlDivElement", "HtmlInputElement"] }
web-time = "0.2.0"
