[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fraction = { version = "0.13.1", features = ["with-serde-support"] }
js-sys = "0.3.64"
leptos = "0.4.10"
num-bigint = { version = "0.4.4", features = ["serde"] }
num-integer = "0.1.45"
num-rational = { version = "0.4.1", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
time = { version = "0.3.28", features = ["wasm-bindgen", "serde"] }
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-subscriber = "0.3.17"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["console", "Performance", "Window"] }
web-time = "0.2.0"
